manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ufo-service
  namespace: ufo
  labels:
    app: ufo
spec:
  selector:
    app: ufo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
