manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ufo-ingress
  namespace: ufo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ufo.tel-ran.de
      secretName: ufo-tls
  rules:
    - host: ufo.tel-ran.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ufo-service
                port:
                  number: 80
